--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by Thira and is
-      <a href="" target="-blank"> open sourced on GitHub </a>
+      <a href="https://github.com/Thira-254/worldclock-project" target="-blank">
+        open sourced on GitHub
+      </a>
     </footer>
     <script src="javascript/index.js"></script>
   </body>
