Added basic HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <title>world clock-Thira</title>
   </head>
   <body>
+    <div class="container">
     <h1>World Clock</h1>
+    <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Nairobi</option>
+        <option value="">France</option>
+
+    </select>
+    <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date"> August 15,2022</div>
+        <div class="time"> 1:48:14 AM </div>
+    </div>
+    <div class="city">
+        <h2>Nairobi</h2>
+        <div class="date"> August 15,2022</div>
+        <div class="time"> 1:48:14 AM </div>
+    </div>
     <footer>
       This project was coded by Thira and is
       <a href="https://github.com/Thira-254/worldclock-project" target="-blank">
