--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>world clock-Thira</title>
   </head>
   <body>
@@ -17,19 +18,19 @@
         <option value="">Nairobi</option>
         <option value="">France</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">August 15,2022</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:14 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="nairobi">
         <div>
           <h2>Nairobi</h2>
-          <div class="date">August 15,2022</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:14 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
